Update 'ux2tbay3x-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-edd544a415.rzmi.p3.openshiftapps.com/rhtap/rhtap-qe:82cc7d8f79f120ca998d7fa4e62d0a75e5601bb7@sha256:99490a8509adc8f8c28290858919af359312c62d4fb446fd2ff41a8087992e64

--- a/components/ux2tbay3x-python/overlays/development/deployment-patch.yaml
+++ b/components/ux2tbay3x-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ux2tbay3x-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-edd544a415.rzmi.p3.openshiftapps.com/rhtap/rhtap-qe:82cc7d8f79f120ca998d7fa4e62d0a75e5601bb7@sha256:99490a8509adc8f8c28290858919af359312c62d4fb446fd2ff41a8087992e64
+          name: container-image
